# tea-db

./: .gitattributes  .gitignore  CLAUDE.md  README.md  ROADMAP.md  tea_rec_engine_design_v2.md
tea-scrapers/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
tea-scrapers/alembic/: env.py
tea-scrapers/alembic/versions/: 001_initial.py  002_producer_trgm_index.py
tea-scrapers/config/: vendors.yaml
tea-scrapers/scripts/: crontab.example
tea-scrapers/src/tea_scrapers/: cli.py  config.py  logging.py
tea-scrapers/src/tea_scrapers/http/: __init__.py  client.py  ratelimit.py
tea-scrapers/src/tea_scrapers/load/: __init__.py  bronze.py
tea-scrapers/src/tea_scrapers/normalize/: __init__.py  canonical.py  shopify_mapper.py  silver.py  tags.py  tier.py
tea-scrapers/src/tea_scrapers/schemas/: __init__.py  ingest.py
tea-scrapers/src/tea_scrapers/sources/: __init__.py  (+2 more)
tea-scrapers/tests/: _vcr_gzip.py  conftest.py
tea-scrapers/tests/integration/: test_bronze_loader.py  test_normalize_canonical.py  test_normalize_pipeline.py  test_normalize_tier.py  test_shopify_crimson_lotus.py  test_shopify_white2tea.py  test_shopify_yunnansourcing_com.py  test_shopify_yunnansourcing_us.py  test_steepster.py
tea-scrapers/tests/unit/: test_bronze_loader.py  test_config.py  test_http_client.py  test_normalize_description_hash.py  test_normalize_shopify_mapper.py  test_normalize_tags.py  test_raw_writer.py  test_run_tracker.py  test_shopify_scraper.py  test_steepster_config.py  test_steepster_scraper.py  test_vcr_gzip.py  test_vendor_config.py
(+34 files in other folders)
