[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tea-scrapers"
version = "0.1.0"
description = "Tea recommendation engine — scraper + medallion-pipeline package (raw JSONL → bronze → silver)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Tea Rec Engine Team" }]

# Runtime dependencies. The set is intentionally small — see scrapers spec §2
# tooling table and §11 "Don't add new dependencies casually."
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3",
    "beautifulsoup4>=4.12",
    "praw>=7.7",
    "pydantic>=2",
    "pydantic-settings>=2.2",
    "click>=8.1",
    "structlog>=24.1",
    "sqlalchemy>=2",
    "alembic>=1.13",
    "python-ulid>=2.2",
    "pyyaml>=6.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "vcrpy>=6.0",
]

[project.scripts]
tea-scrape = "tea_scrapers.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
